# financial_cpp_copy

./: CMakeCache.txt  CMakeLists.txt  ENHANCED_SYSTEM_SUMMARY.md  Makefile  README.md  cmake_install.cmake  financial_backtester  fix_strategy_robustness.cpp  quant_data_mining.ipynb  results_row_caps.md  strategy_perf_test  strategy_performance_test.cpp  temp_strategies.txt  test_data_integrity.cpp  test_integrity  trading_system
results/: enhanced_results_20250625_193908.md  enhanced_results_20250625_194848.md  enhanced_results_20250625_220546.md  enhanced_results_20250625_221545.md  performance_summary_20250625_193908.txt  performance_summary_20250625_194848.txt  performance_summary_20250625_220546.txt  performance_summary_20250625_221545.txt
scripts/: run_enhanced_backtest.sh  run_row_caps.sh
src/: main.cpp  main.cpp.bak
src/core/: Backtester.h  ExecutionHandler.h  Utils.h
src/data/: DataManager.cpp  DataManager.h
src/strategies/: AdaptiveMeanReversion.h  AdvancedMomentum.h  BuyAndHold.h  EnsembleRLStrategy.h  LeadLagStrategy.h  LogisticRegressionStrategy.h  MomentumIgnition.h  MovingAverageCrossover.h  OpeningRangeBreakout.h  PairsTrading.h  StatisticalArbitrage.h  Strategy.h  VWAPReversion.h  XGBoost.cpp
